# stamina-toolset

./: .gitignore  Cargo.toml  README.md
models/DA_Simple/: DA_Simple.crn  DA_Simple.jl  DA_Simple.sm  DA_Simple_old.crn
models/I2FFL/: I2FFL.crn
models/TrivialToy/: toy.crn
src/: main.rs
src/bmc/: bounds.rs  encoding.rs  mod.rs  unroller.rs  vas_bmc.rs
src/builder/: builder.rs  mod.rs  stamina.rs  wayfarer.rs
src/builder/ragtimer/: mod.rs  ragtimer.rs  rl_traces.rs
src/checker/: checker.rs  mod.rs  result.rs
src/cycle_commute/: commute.rs  mod.rs
src/demos/: bmc_demo.rs  cycle_commute_demo.rs  mod.rs
src/dependency/: graph.rs  mod.rs  trimmer.rs
src/logging/: messages.rs
src/model/: mod.rs  model.rs  vas_model.rs  vas_trie.rs
src/parser/: mod.rs  parser.rs  vas_file_reader.rs  vas_parser.rs
src/property/: mod.rs  property.rs
src/trace/: mod.rs  trace_trie.rs
src/util/: util.rs
src/validator/: mod.rs  vas_validator.rs
toy_models/ModifiedYeastPolarization/: ModifiedYeastPolarization.crn  gen_trace.py
